Final mods for window adapter

--- a/src/windowadapter/CMakeLists.txt
+++ b/src/windowadapter/CMakeLists.txt
@@ -10,7 +10,16 @@ set(SOURCES
 
 add_executable(winadapt ${SOURCES})
 
+if(USE_XCB)
 add_definitions(-DUSE_XCB)
+else()
+    if(USE_XLIB)
+        add_definitions(-DUSE_XLIB)
+    else()
+        add_definitions(-DUSE_VSG)
+    endif()
+endif()
+
 
 target_link_libraries(winadapt vsg::vsg X11 X11-xcb xcb)
 
