Clean-ups to window adapter

--- a/src/windowadapter/CMakeLists.txt
+++ b/src/windowadapter/CMakeLists.txt
@@ -1,16 +1,15 @@
 set(SOURCES
     main.cpp
+    NativeAdapterXcb.cpp
+    NativeAdapterXlib.cpp
     WindowAdapter.cpp
-    XCBNativeAdapter.cpp
-    XCBWindow.cpp
-    XlibNativeAdapter.cpp
-    XlibWindow.cpp
+    WindowXcb.cpp
+    WindowXlib.cpp
    )
-
-
-add_executable(winadapt ${SOURCES})
 
 add_definitions(-DUSE_XCB)
 
-target_link_libraries(winadapt vsg::vsg X11 X11-xcb xcb)
+add_executable(winadapt ${SOURCES})
+
+target_link_libraries(winadapt vsg::vsg X11 xcb)
 
